Added to previous commit with more from Reach documentation, todays topic covered compotion over inheritence and thinking in react, which is to be continued.

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,49 @@
   pointer-events: none;
 }
 
+.fancy-border {
+  padding: 10px 10px;
+  border: 11px solid;
+  margin-top: 29px;
+}
+
+.fancy-border-blue {
+  border-color: blue;
+}
+
+.fancy-border-coral {
+  border-color: coral;
+}
+
+.split-pane {
+  width: 100%;
+  height: 100%;
+}
+
+.left-pane {
+  float: left;
+  width: 31%;
+  height: 100%;
+}
+
+.right-pane {
+  float: left;
+  width: 65%;
+  height: 100%;
+}
+
+.contacts {
+  width: 100%;
+  height: 100%;
+  background: lightblue;
+}
+
+.chat {
+  width: 100%;
+  height: 100%;
+  background: lightcoral;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
