Added to previous commit on code along and exercise on react js basics, todays topic covered how to use state and props and interactivity for todos list app.

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   color: green;
 }
 
-.todo-app-phase-two {
+.todo-app-phase-two, .todo-list {
   display: flex;
   flex-direction: column;
   width: 47%;
